[gd_scene load_steps=7 format=3 uid="uid://dfay3441xsrb7"]

[ext_resource type="Script" path="res://场景/玩家/枪/gun_pickup.gd" id="1_lufhl"]
[ext_resource type="Shader" path="res://shader/outline.gdshader" id="2_t7wbg"]
[ext_resource type="Texture2D" uid="uid://b3gr41u6v5o6o" path="res://资源/1/gun/gun_10.png" id="3_7pmp1"]
[ext_resource type="PackedScene" uid="uid://cvrh5iso5kj1r" path="res://场景/玩家/组件/talk_icon.tscn" id="4_anga8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_numl2"]
shader = ExtResource("2_t7wbg")
shader_parameter/Smooth = true
shader_parameter/width = 30.0
shader_parameter/outline_color = Vector4(234, 324, 0, 1)
shader_parameter/pixel_size = 10
shader_parameter/width_speed = 5.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_attrx"]
size = Vector2(22, 18)

[node name="gun_1_pickup" type="Area2D"]
z_index = 2
y_sort_enabled = true
position = Vector2(0, 17)
script = ExtResource("1_lufhl")
gun = "res://场景/玩家/枪/gun_10/gun_10.tscn"

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_numl2")
texture = ExtResource("3_7pmp1")
region_enabled = true
region_rect = Rect2(0, 0, 48, 48)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_attrx")
debug_color = Color(1, 1, 1, 0.42)

[node name="talk_icon" parent="." instance=ExtResource("4_anga8")]
visible = false
position = Vector2(-1, -17)
talk_name = "gun_10"

[connection signal="enter" from="." to="." method="_on_enter"]
[connection signal="exit" from="." to="." method="_on_exit"]
[connection signal="interacted" from="." to="." method="_on_interacted"]
